--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:image:alt" content="OSSPH Freefolio">
     <meta name="twitter:title" content="OSSPH Freefolio - Hacker Template" />
     <meta name="twitter:description" content="100% FREE Professional Portfolio Templates - Hacker Template" />
-    <title>Hacker | Free Professional Portfolio Website Templates by Joff Tiquez</title>
+    <title>Aravind Gopan</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_package_v0.16/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_package_v0.16/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon_package_v0.16/favicon-16x16.png">
@@ -77,7 +77,7 @@
               <nav>
                 <v-btn href="#skills" text="text" class="primary--text">/Skills</v-btn href="skills">
                 <v-btn href="#works" text="text" class="primary--text">/Recent Works</v-btn>
-                <v-btn href="#hobbies" text="text" class="primary--text">/Hobbies</v-btn>
+                <!-- <v-btn href="#hobbies" text="text" class="primary--text">/Hobbies</v-btn> -->
                 <v-btn href="#contact" text="text" class="primary--text" outlined="outlined">/Contacts</v-btn>
               </nav>
             </v-col>
