--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,10 @@
     <meta property="og:title" content="Arvind Gopan "/>
     <meta property="og:description" content="Arvind Gopan "/>
     <meta property="og:type" content="website" />
-    <meta
-        property="og:image"
-        content="https://i.postimg.cc/fT3yn5rC/hacker.png"
-    />
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image:alt" content="Arvind Gopan ">
+    <meta name="twitter:image:alt" content="Arvind">
     <meta name="twitter:title" content="Arvind Gopan " />
-    <meta name="twitter:description" content="Arvind Gopan " />
+    <meta name="twitter:description" content="portfolio" />
     <title>Aravind Gopan</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_package_v0.16/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_package_v0.16/favicon-32x32.png">
